// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchStyledSnapshot >> SCComponent >> component >> styled.div 1`] = `
"
{
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  position: relative;
}
"
`;

exports[`toMatchStyledSnapshot >> SCComponent >> component >> styled.li 1`] = `
"
{
  margin-left: 12px;

  position: relative;
  padding: 12px;
  &:last-child {
    margin-left: 0;
  }
}
"
`;

exports[`toMatchStyledSnapshot >> SCComponent >> component >> styled.ul 1`] = `
"
{
  margin: 0;
  padding: 0;
}
"
`;

exports[`toMatchStyledSnapshot >> SCComponent >> component 1`] = `
<styled.div>
  <ClassComponent>
    <FunctionComponent />
  </ClassComponent>
  <FunctionComponent />
  <styled.ul>
    <styled.li>
      One
    </styled.li>
    <styled.li>
      Two
    </styled.li>
    <styled.li>
      Three
    </styled.li>
    <styled.li>
      Four
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`toMatchStyledSnapshot >> SerializeComponent >> component >> ClassComponent props 1`] = `
"
{
  display: block;
  position: relative;
  font-size: 16px;
  line-height: 1.2;
}
"
`;

exports[`toMatchStyledSnapshot >> SerializeComponent >> component >> FunctionComponent props 1`] = `
"
{
  display: block;
  position: relative;
}
"
`;

exports[`toMatchStyledSnapshot >> SerializeComponent >> component >> Styled(styled.div) 1`] = `
"
{
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  position: relative;
}
"
`;

exports[`toMatchStyledSnapshot >> SerializeComponent >> component >> styled.ul 1`] = `
"
{
  margin: 0;
  padding: 0;
}
"
`;

exports[`toMatchStyledSnapshot >> SerializeComponent >> component 1`] = `
<ClassComponent
  Component={Symbol(FunctionComponent)}
  callback={[Function]}
  consumer={
    <Context.Consumer>
      <RenderProp(div) />
    </Context.Consumer>
  }
  decorator={<WithTheme(ClassComponent) />}
  element={<FunctionComponent />}
  forwardRef={<ForwardRefComponent />}
  fragment={<React.Fragment />}
  memo={<Memo(MemoComponent) />}
  portal={
    <Portal(ClassComponent)>
      <FunctionComponent />
    </Portal(ClassComponent)>
  }
  provider={
    <Context.Provider
      value=""
    />
  }
  renderProp={
    <RenderProp(FunctionComponent)
      renderProp={<RenderProp(div) />}
    />
  }
  styled={Symbol(styled.div)}
  styledFunctionComponent={<Styled(FunctionComponent) />}
  styledStyledComponent={<Styled(styled.div) />}
>
  <ForwardRefComponent />
  <FunctionComponent />
  <Memo(MemoComponent) />
  <Styled(FunctionComponent) />
  <styled.ul>
    <Styled(styled.div) />
    <Styled(styled.div) />
    <Styled(styled.div) />
    <Styled(styled.div) />
  </styled.ul>
</ClassComponent>
`;
